# KKTerminalQT

./: .gitignore  ChangeLog  INSTALL  KKTerminalQT.mpz  Makefile.am  README.md  autogen.sh  configure.ac  remakesourcelist
KKTerminalQT/: flagsandlibs  sources
KKTerminalQT/app/: Makefile.am
KKTerminalQT/resources/icons/kkeditqticons/: index.theme
KKTerminalQT/resources/icons/kkterminalqticons/: index.theme
KKTerminalQT/resources/man/: kkterminalqt.1
KKTerminalQT/resources/pixmaps/: KKTerminalQT.desktop
KKTerminalQT/resources/themes/: RootColours.colorscheme  brown2.colorscheme  green.colorscheme  greyscale.colorscheme  redtest.colorscheme  winter.colorscheme  wood.colorscheme
KKTerminalQT/src/: KKTerminalQTClass.cpp  KKTerminalQTClass.h  QT_AboutBox.cpp  QT_AboutBox.h  SingleInstanceClass.cpp  SingleInstanceClass.h  globals.h  main.cpp  prefsClass.cpp  prefsClass.h
PrivateDevFiles/: MakeKKTerminalQTAppImage  startxroot
