#
#
AC_INIT([KKTerminalQT],[0.3.2],[PROJ],[KKTerminalQT])

AC_CONFIG_HEADERS([config.h])
AC_PROG_CXX

AM_INIT_AUTOMAKE
PKG_PROG_PKG_CONFIG

AC_PROG_CC
AC_PROG_CXX

X11_MODULES="x11 >= 1.0.0"
PKG_CHECK_MODULES(X11, $X11_MODULES)
AC_SUBST(X11_LIBS)

AC_ARG_ENABLE(qt5,AS_HELP_STRING([--enable-qt5],[Build fot Qt5]),
    [enable_qt5=$enableval],
    [enable_qt5="no"])

	if test "$enable_qt5" = "no"; then
		QTWIDGETS_MODULES="Qt6Widgets >= 6.6.0"
		PKG_CHECK_MODULES(QTWIDGETS, $QTWIDGETS_MODULES)

		QTCORE_MODULES="Qt6Core >= 6.6.0"
		PKG_CHECK_MODULES(QTCORE,$QTCORE_MODULES)

		QTERMWIDGET_MODULES="qtermwidget6 >= 2.0.0"
		PKG_CHECK_MODULES(QTERMWIDGET, $QTERMWIDGET_MODULES)

		AC_DEFINE([_USEQT6_], [], [Build Qt6])
		AC_MSG_NOTICE([Using Qt6])
	else
		QTWIDGETS_MODULES="Qt5Widgets >= 5.15.0"
		PKG_CHECK_MODULES(QTWIDGETS,$QTWIDGETS_MODULES)

		QTCORE_MODULES="Qt5Core >= 5.15.0"
		PKG_CHECK_MODULES(QTCORE,$QTCORE_MODULES)

		QTERMWIDGET_MODULES="qtermwidget5 >= 1.4.0"
		PKG_CHECK_MODULES(QTERMWIDGET, $QTERMWIDGET_MODULES)

		AC_MSG_NOTICE([Using Qt5])
	fi

AC_SUBST(QTCORE_CFLAGS)
AC_SUBST(QTCORE_LIBS)

AC_SUBST(QTWIDGETS_CFLAGS)
AC_SUBST(QTWIDGETS_LIBS)

AC_SUBST(QTERMWIDGET_CFLAGS)
AC_SUBST(QTERMWIDGET_LIBS)

AC_CONFIG_FILES(Makefile KKTerminalQT/app/Makefile)
AC_OUTPUT
